removed ignored items

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 # appsettings
 appsettings.json
 appsettings.Development.json
+/QuickBite/appsettings.json
+/QuickBite/appsettings.Development.json
