--- a/QuickBite/QuickBite.csproj
+++ b/QuickBite/QuickBite.csproj
@@ -83,6 +83,8 @@
   <ItemGroup>
     <Folder Include="Areas\Restaurant\Data\" />
     <Folder Include="Areas\Restaurant\Models\" />
+    <Folder Include="Areas\SiteAdmin\Data\" />
+    <Folder Include="Areas\SiteAdmin\Models\" />
     <Folder Include="wwwroot\icons\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
